--- a/style.css
+++ b/style.css
@@ -67,5 +67,11 @@ button:hover {
 .story {
     margin-top: 50px;
     font-style: bold;
+    font-size:20px;
     color: #555;;
+}
+
+.instructions {
+    font-style: italic;
+    color: #666;
 }
